--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,9 +1,16 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
+    encoders:
+        FOS\UserBundle\Model\UserInterface: bcrypt
 
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_DEFAULT
+        ROLE_SUPER_ADMIN: ROLE_DEFAULT
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
+        fos_userbundle:
+            id: fos_user.user_provider.username
         in_memory:
             memory: ~
 
@@ -14,7 +21,30 @@ security:
             security: false
 
         main:
+            pattern: ^/
+            form_login:
+                provider: fos_userbundle
+                csrf_provider: security.csrf.token_manager
+
+            logout:
+                path:        /logout
+                target:      /blog
             anonymous: ~
+            form_login:
+                always_use_default_target_path: false
+                default_target_path: /blog
+                target_path_parameter: _target_path
+                use_referer: false
+
+    access_control:
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/blog/modifier/*, role: IS_AUTHENTICATED_REMEMBERED }
+        - { path: ^/blog/supprimer/*, role: IS_AUTHENTICATED_REMEMBERED }
+        - { path: ^/blog/ajouter/, role: IS_AUTHENTICATED_REMEMBERED }
+
             # activate different ways to authenticate
 
             # http_basic: ~
